# Tristeon3D

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE.txt  README.md
Assets/Fonts/: cambria.ttc
Assets/Models/crytek-sponza/: sponza.mtl
Documents/Engine Architecture/: Tristeon Core Architecture.xml  Tristeon Vulkan Extension.xml
Source/Tristeon/: Scenes.ProjectSettings  Tristeon.vcxproj  Tristeon.vcxproj.filters  imgui.ini
Source/Tristeon/Assets/: Another.prefab  Crytek Sponza.scene  Crytek-Sponza.scene  Material.mat  MyScene.scene  NewScene.scene  RenderTest.scene  Scene.scene  Scene2.scene  Shader.shader  Skybox.skybox  SkyboxTest.scene  SkyboxTest.skybox  Sponza.scene  Test.scene
Source/Tristeon/Assets/PBR/: mat_concrete.mat  mat_iron.mat  mat_metal.mat
Source/Tristeon/Assets/floor/: Floor.mat
Source/Tristeon/Assets/iron/: Sphere.mat
Source/Tristeon/DebugRelease/Tristeon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tristeon.lastbuildstate  Tristeon.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Source/Tristeon/Files/Primitives/: Sphere.prefab
Source/Tristeon/Files/Shaders/: Compile.bat  CompileLine.bat  CompileScreen.bat  Line.frag  Line.vert  LineFVulkan.spv  LineVVulkan.spv  Screen.frag  Screen.vert  ScreenFVulkan.spv  ScreenVVulkan.spv  Skybox.frag  Skybox.vert  SkyboxFVulkan.spv  SkyboxVVulkan.spv  Standard.frag  Standard.vert  StandardFVulkan.spv  StandardVVulkan.spv
Source/Tristeon/ImGUI/: imgui.cpp  imgui.h  imgui_impl_glfw_vulkan.h
Source/Tristeon/ImGUI/Plugins/: ImGuizmo.cpp
Source/Tristeon/Tristeon Source/: Application.cpp  Application.h  Main.cpp
Source/Tristeon/Tristeon Source/Core/: Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  Message.h  Settings.cpp  Settings.h  TObject.cpp  TObject.h  Transform.cpp  Transform.h
Source/Tristeon/Tristeon Source/Data/: Image.cpp  Image.h  ImageBatch.cpp  ImageBatch.h  Mesh.cpp  Mesh.h  MeshBatch.cpp  MeshBatch.h  TextFile.h
Source/Tristeon/Tristeon Source/Editor/: DiffUtil.cpp  DiffUtil.h  Draggable.h  EditorImage.h  (+20 more)
Source/Tristeon/lib/: VKstatic.1.lib  VkLayer_api_dump.lib  VkLayer_core_validation.lib  VkLayer_monitor.lib  VkLayer_object_tracker.lib  VkLayer_parameter_validation.lib  VkLayer_screenshot.lib  VkLayer_threading.lib  VkLayer_unique_objects.lib  VkLayer_utils.lib  glfw3_x64_debug.lib  glfw3_x64_debug_release.lib  glfw3_x64_release.lib  glfw3_x86_debug.lib  glfw3_x86_debug_release.lib  glfw3_x86_release.lib  spirv-cross-core_debug_release.lib
include/vulkan/: vulkan.hpp
src/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Main.cpp
src/Core/: BindingData.cpp  BindingData.h  Collector.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  IntrospectionInterface.h  JsonSerializer.h  ManagerProtocol.cpp  ManagerProtocol.h  Message.cpp  Message.h  MessageBus.cpp  MessageBus.h  RenderData.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Serializable.h  TObject.cpp  TObject.h  Transform.cpp  Transform.h  Type.h  TypeRegister.h  UserPrefs.cpp  UserPrefs.h
src/Core/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  TestScript.cpp
src/Core/Managers/: InputManager.cpp  InputManager.h  Manager.cpp
src/Core/Rendering/: DebugDrawManager.cpp  DebugDrawManager.h  Material.cpp  Material.h  RenderManager.cpp  RenderManager.h  ShaderFile.cpp  ShaderFile.h  Skybox.cpp  Skybox.h  Window.cpp  Window.h
src/Data/: Image.cpp  Image.h  ImageBatch.cpp  ImageBatch.h  Mesh.cpp  Mesh.h  MeshBatch.h  Resources.cpp  Resources.h  TextFile.cpp  TextFile.h
src/Editor/: DiffUtil.cpp  DiffUtil.h  Draggable.h  EditorDragging.cpp  EditorDragging.h  EditorImage.cpp  EditorImage.h  EditorNode.cpp  EditorNode.h  EditorNodeTree.cpp  EditorNodeTree.h  EditorSelection.cpp  EditorSelection.h  EditorWindow.cpp  EditorWindow.h  JsonSerializer.h  Prefab.cpp  Prefab.h  Selectable.h  Serializable.h  TristeonEditor.cpp  TristeonEditor.h  TypeRegister.h
src/Editor/Asset Browser/: AssetBrowser.cpp  AssetBrowser.h  AssetItem.cpp  AssetItem.h  FileItem.cpp  FileItem.h  FileItemManager.cpp  FileItemManager.h  FolderHierarchy.cpp  FolderHierarchy.h  FolderItem.cpp  FolderItem.h  MaterialFileItem.cpp  MaterialFileItem.h  MeshFileItem.cpp  MeshFileItem.h  PBRMaterialFileItem.cpp  PBRMaterialFileItem.h  PrefabFileItem.cpp  PrefabFileItem.h  SceneFileitem.cpp  SceneFileitem.h  ShaderFileItem.cpp  ShaderFileItem.h  SkyboxFileItem.cpp  SkyboxFileItem.h
src/Editor/Inspector/: InspectorWindow.cpp  InspectorWindow.h
src/Editor/Scene editor/: EditorCameraController.cpp  EditorCameraController.h  GameObjectHierarchy.cpp  GameObjectHierarchy.h  SceneWindow.cpp  SceneWindow.h
src/Environment/: Compiler.h  Platform.h
src/ImGUI/: imgui_impl_glfw_vulkan.cpp
src/ImGUI/Plugins/: ImGuizmo.cpp
src/Math/: Quaternion.cpp  Quaternion.h  Rect.cpp  Rect.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
src/Misc/: Color.cpp  Color.h  Console.cpp  Console.h  Delegate.h  ObjectPool.h  Property.h  StringUtils.cpp  StringUtils.h  WorkQueue.cpp  WorkQueue.h  vector.h
src/Misc/Hardware/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Time.cpp  Time.h
src/Physics/: AABB.cpp  AABB.h  BoxCollider.cpp  BoxCollider.h  Collision.cpp  Collision.h  Hit.cpp  Hit.h  Line.cpp  Line.h  OBB.cpp  OBB.h  OctNode.cpp  OctNode.h  OctTree.cpp  OctTree.h  OctTreeManager.cpp  OctTreeManager.h  PartitionTree.cpp  PartitionTree.h  Physics.cpp  Physics.h  Ray.cpp  Ray.h  RigidBody.cpp  RigidBody.h  RigidbodyConstraints.h  TreeNode.cpp  TreeNode.h
src/Physics/Tests/: CollisionTesting.cpp  CollisionTesting.h  CollisionTestingLeon.cpp  CollisionTestingLeon.h  CollisionTestingTristan.cpp  CollisionTestingTristan.h  OBB.cpp  OBB.h  Projection.cpp  Projection.h
src/Scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/Standard/: CharacterController.cpp  CharacterController.h  FirstPersonCameraController.cpp  FirstPersonCameraController.h  TranslationTest.h
src/XPlatform/: access.h  enable_template.h  typename.h
(+221 files in other folders)
